club create form and schema. initial state
