# packages/validation/src/club/index.ts
@@ -1,19 +1,26 @@
-export {
-    applyClubSchema
-} from "./apply-club-schema"
+export { applyClubSchema } from "./apply-club-schema";
 
 export {
-    type ClubSettingsRequest,
-    clubSettingsSchema,
-    type ClubSettingsRequestInput,
-    type ClubSettingsRequestOutput,
-    ScopeOptions,
-    StatusOptions,
-    PrivacyOptions,
-    JoinModeOptions
-} from "./club-settings-schema"
+  type ClubSettingsRequest,
+  clubSettingsSchema,
+  type ClubSettingsRequestInput,
+  type ClubSettingsRequestOutput,
+} from "./club-settings-schema";
 export {
-    clubCreateSchema,
-    type ClubCreateSchemaType,
-    type ClubCreateOutputType,
-} from "./club-create-schema"
+  clubCreateSchema,
+  joinEnumType,
+  scopeEnumType,
+  privacyEnumType,
+  type ClubCreateSchemaType,
+  type ClubCreateOutputType,
+} from "./club-create-schema";
+
+export {
+  PrivacyOptions,
+  ScopeOptions,
+  JoinModeOptions,
+  Privacy,
+  JoinMode,
+  Scope,
+  Status,
+} from "./enums";
